Expose the Top Expression Stack along with Results and Vars Update the user interface to show work in progress / stack Update the UI to recalculate on backspace as well as space, . and enter

--- a/ambi.css
+++ b/ambi.css
@@ -12,6 +12,11 @@
 		border: 1px dashed #2634FF;
 		width: 100%;
 	}
+	#stack {
+		background: #dadada;
+		border: 1px dashed black;
+		width: 100%;
+	}
 	#vars {
 		width: 100%;
 	}
@@ -36,7 +41,7 @@
 	}
 	#io td {
 		vertical-align: top;
-		width: 50%;
+		width: 33%;
 		padding: 1ex;
 	}
 	p {
