--- a/ambi.css
+++ b/ambi.css
@@ -30,8 +30,10 @@
 		color: #0300B2;
 	}
 	h2, h3, h4 {
-		margin: 0px;
-		color:  #0300B2
+		margin: .5ex;
+		color:  #0300B2;
+		clear: both;
+		
 	}
 	h3, h4 {
 		color:  #7785FF
@@ -87,9 +89,11 @@
         line-height: 1.5em;
         white-space:nowrap;
 
+
 	}
 	td {
 	    vertical-align: top;
+	    padding: 1ex;
 	}
 	td#workingresults {
 	    width: 10%;
