--- a/ambi.css
+++ b/ambi.css
@@ -57,16 +57,16 @@
 		margin: 0px;
 		padding: 0;
 		font-size: 24px;
-		color: #7A8EFF;
+		color: #0026FF;
 	}
 	h2, h3, h4 {
 		margin: .5ex;
-		color:  #7A8EFF;
+		color:  #0026FF;
 		clear: both;
 		
 	}
 	h3, h4 {
-		color:  #7A8EFF;
+		color:  #0026FF
 	}
 	table#io { 
 		width: 100%;
